RESOLVED FIXED147367
[iOS] Pressing 'done' in fullscreen video sometimes does nothing; stuck in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=147367
Summary [iOS] Pressing 'done' in fullscreen video sometimes does nothing; stuck in fu...
Jer Noble
Reported 2015-07-28 13:27:06 PDT
[iOS] Pressing 'done' in fullscreen video sometimes does nothing; stuck in fullscreen
Attachments
Patch (4.61 KB, patch)
2015-07-28 13:32 PDT, Jer Noble
eric.carlson: review+
Patch for landing (5.10 KB, patch)
2015-07-28 14:17 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-07-28 13:32:08 PDT
Eric Carlson
Comment 2 2015-07-28 13:39:20 PDT
Comment on attachment 257674 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=257674&action=review > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:151 > + WebCore::Timer m_watchdogTimer; Nit: Isn't RunLoop::Timer<> the new hotness? > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1389 > + if (!m_watchdogTimer.isActive()) You should probably remove this check so you reset the watchdog in the (unlikely?) event that this is called recursively.
Jer Noble
Comment 3 2015-07-28 13:45:09 PDT
(In reply to comment #2) > Comment on attachment 257674 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=257674&action=review > > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.h:151 > > + WebCore::Timer m_watchdogTimer; > > Nit: Isn't RunLoop::Timer<> the new hotness? That takes a RunLoop& parameter, which we don't have access to. > > Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:1389 > > + if (!m_watchdogTimer.isActive()) > > You should probably remove this check so you reset the watchdog in the > (unlikely?) event that this is called recursively. I want to avoid a situation where AVKit asks us to exit repeatedly, but we never do because the request keeps resetting the timer.
Jer Noble
Comment 4 2015-07-28 14:17:46 PDT
Created attachment 257684 [details] Patch for landing
Jer Noble
Comment 5 2015-07-30 15:19:13 PDT
WebKit Commit Bot
Comment 6 2015-07-30 16:17:52 PDT
Comment on attachment 257684 [details] Patch for landing Clearing flags on attachment: 257684 Committed r187617: <http://trac.webkit.org/changeset/187617>
Radar WebKit Bug Importer
Comment 7 2015-12-02 13:25:17 PST
Note You need to log in before you can comment on or make changes to this bug.